# omni-v2v

./: .env.template  README.md  docker-compose.yml
src/backend/: Dockerfile  README.md  pyproject.toml
src/backend/backend/: app.py  logging.py  settings.py
src/backend/backend/db/: init.py
src/backend/backend/models/: __init__.py  task.py
src/backend/backend/schemas/: task.py  token.py
src/frontend/: .eslintrc.js  next.config.mjs  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/app/[tid]/: page.tsx
src/frontend/src/app/history/: layout.tsx  page.tsx
src/frontend/src/components/HomePage/: PromptInput.tsx  VideoUploader.tsx
src/frontend/src/components/MainLayout/: MainLayout.tsx  Navbar.tsx
src/frontend/src/lib/: consts.ts  env.mjs  http.ts  oss.ts
src/frontend/src/lib/store/: index.ts
src/frontend/src/lib/store/slices/: v2vInput.ts
