[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ming Yang <ymviv@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
beanie = "^1.23.0"
pydantic-settings = "^2.0.3"
structlog = "^23.2.0"
oss2 = "^2.18.2"
aliyun-python-sdk-sts = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
